<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary" />
    <LinearLayout
        android:id="@+id/bottomlinear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#DCDCDC">
        <TextView
            android:id="@+id/automatic_scan"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/automatic_scan"
            />
        <TextView
            android:id="@+id/manual_choose"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/manual_choose"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cursorarea"
        android:layout_width="fill_parent"
        android:background="#CDCDCD"
        android:orientation="horizontal"
        android:layout_height="2dp">
        <ImageView
            android:id="@+id/cursor_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        </ImageView>
    </LinearLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_choose_xiaoshuo"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </androidx.viewpager.widget.ViewPager>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp"
        android:background="@drawable/mline"
        android:paddingBottom="16dp"
        android:visibility="visible">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/choose_all"
            android:layout_weight="1"
            android:layout_marginLeft="24dp"
            android:text="@string/choose_all"
            android:textColor="@color/nomal_text"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_book"
            android:layout_weight="1"
            android:text="@string/in_bookshelf"
            android:gravity="right"
            android:layout_marginRight="14dp"
            android:textColor="@color/nomal_text"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>